# VoxCity

./: .dockerignore  .env.example  .gitignore  .readthedocs.yml  .travis.yml  BUILDING_GDF_USAGE.md  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  debug_gap_detailed.py  debug_voxelization.py  docker-compose.yml  example_building_gdf.py  projectdatabase.edb  pyproject.toml  requirements_dev.txt  test_lod2.py  test_lod2_timing.py  tox.ini
.claude/: settings.json  settings.local.json
.github/workflows/: README.md  ci.yml  docs.yml  release.yml  test.yml
.superpowers/brainstorm/2026-05-05-surface-zone-sim-design/: .server-stopped  surface-overlay-options.html
.superpowers/brainstorm/2026-05-06-highlight-edge-options/: .server-stopped
.superpowers/brainstorm/640-1777553818/: .server-stopped  waiting.html
app/: Dockerfile  Dockerfile_plateau  README.md  app.py  app_plateau.py  app_tokyo.py  app_tokyo_cache.py  command.txt  debug_figure.py  debug_first_trace.json  debug_trace.py  precompute_citygml_cache.py  precompute_las_cache.py  run.py  tokyo_las.ipynb  tokyo_las.py
app/archive/: app_tokyo_cache.py  check_plotly.py
app/backend/: __init__.py  config.py  main.py  models.py  requirements.txt  scene_geometry.py  session_io.py  state.py  surface_zone_edges.py  surface_zones.py  test_config.py  test_export_geotiff.py  test_import_obj.py  test_preview_disable.py  test_session_io.py  test_session_save_load.py  test_static_serving.py  zoning.py
app/frontend/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/frontend/src/: App.tsx  api.test.ts  api.ts  constants.ts  index.css  types.d.ts
app/preprocessing/: precompute_citygml_cache.py  tokyo_las.ipynb  tokyo_las.py
demo/: projectdatabase.edb
docs/: .nojekyll  Makefile  README.md  bibliography.md  build_docs.py  changelog.md  conduct.md  conf.py  contributing.md  coordinate_systems_ja.md  debug_view_factor.ipynb  demo.ipynb  index.md  index.rst  installation.md  installation.rst  interactive_plotly.md  make.bat  projectdatabase.edb  references.bib  references.md  requirements.txt  rhino_obj_import.md  usage.rst
docs/_build/html/: .buildinfo  README.html  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/_static/: custom.css
docs/archive/: README.rst  omt.py  urbanwatch.py
docs/concepts/: coordinate_systems.md  coordinate_systems_ja.md  index.md  voxel_model.md
docs/examples/: demo_3d_visualization.ipynb  demo_basic.ipynb  demo_data_sources.ipynb  demo_envi-met.ipynb  demo_export_formats.ipynb  demo_landmark.ipynb  demo_obj.ipynb  demo_quickstart.ipynb  demo_solar.ipynb  demo_view.ipynb  index.md
docs/guides/: data_sources.md  earth_engine.md  index.md
docs/output/magicavoxel/: test_seattle_0_0_0.vox
docs/output/test/: building.geojson  canopy_height.tif  dem.tif  gvi_test.mtl  landmark_visibility_test.mtl  output.INX  svi_test.mtl  voxcity_landmark_visibility_test.mtl  voxcity_test.mtl
docs/reference/: data_sources.md  index.md  land_cover.md
docs/superpowers/plans/: 2026-04-30-zoning-tab.md  2026-05-01-three-js-migration.md  2026-06-23-rhino-obj-building-import.md  2026-06-24-app-obj-import-tab.md  2026-06-25-import-tab-punchlist.md  2026-06-26-gsi-dem-downloader.md  2026-06-29-obj-import-window-class.md
docs/superpowers/specs/: 2026-04-30-zoning-tab-design.md  2026-05-05-building-surface-zones-design.md  2026-05-05-surface-zone-simulation-highlights-design.md  2026-05-06-surface-zone-edge-highlights-design.md  2026-05-07-building-height-edit-design.md  (+6 more)
scripts/: make_readme_demo_gif.py
serious-game/: README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js
serious-game/src/: App.tsx  index.css
src/voxcity/: __init__.py  errors.py  generator.py  io.py  migrate.py  models.py  voxcity.py
src/voxelcity/: __init__.py  cli.py  voxelcity.py
tests/: __init__.py  conftest.py  test_boundary_vertical_mask.py  test_coordinate_mapping.py  test_coverage_batch10a.py  test_coverage_batch10b.py  test_coverage_batch10c.py  test_coverage_batch10d.py  test_download.py  test_downloader.py  test_downloader_eubucco.py  test_downloader_gba.py  test_downloader_gee.py  test_downloader_gsi.py  test_downloader_gsi_integration.py  test_downloader_ocean.py  test_downloader_utils.py  test_draw_polygon.py  test_errors.py  test_exporter.py  test_exporter_cityles.py  test_exporter_envimet.py  test_exporter_geotiff.py  test_exporter_magicavoxel.py  test_exporter_netcdf_coverage.py  test_exporter_obj.py  test_exporter_obj_grid_coverage.py  test_file_operations.py  test_gee.py  test_generator.py  test_generator_gsi_dem.py  test_generator_io.py  test_generator_io_coverage.py  test_generator_update.py  test_generator_vertex_normalization.py  test_generator_voxelizer.py  test_generator_voxelizer_coverage.py  test_geo.py  test_geo_projector.py  test_geojson.py  (+144 more)
tests/app/: test_building_surfaces_endpoint.py  test_edit_building_height.py  test_ground_roofs_flag.py  test_ndsm_canopy.py  test_scene_geometry.py  test_scene_geometry_highlight.py  test_surface_zone_edges.py  test_surface_zone_edges_endpoint.py  test_surface_zones.py  test_zones.py
tests/importer/: conftest.py  test_add_buildings_from_obj.py  test_integrate.py  test_loader.py  test_transform.py  test_units.py  test_voxelize.py  test_voxelize_meshlib.py  test_windows.py
tests/output/: voxcity.INX
tests/simulator/: _roof_helpers.py  test_cache_content_hash.py  test_extraction_reference_k.py  test_landmark_roofs_cpu.py  test_solar_roofs_cpu.py  test_view_roofs_cpu.py  test_view_topmost_cpu.py
tests/simulator_gpu/: test_landmark_roofs_gpu.py  test_radiation_model_cache.py  test_solar_computation_mask.py  test_solar_roofs_gpu.py  test_solar_volumetric_roofs_gpu.py  test_surface_target_selectors.py  test_svf_computation_mask.py  test_top_level_computation_mask.py  test_view_roofs_gpu.py  test_window_building_surface.py
(+349 files in other folders)
