[tool.poetry]
name = "voxcity"
version = "0.3.9"
description = "voxcity is an easy and one-stop tool to output 3d city models for microclimate simulation by integrating multiple geospatial open-data"
authors = ["Kunihiko Fujiwara <kunihiko@nus.edu.sg>"]
maintainers = ["Kunihiko Fujiwara <kunihiko@nus.edu.sg>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "voxcity", from = "src" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "*"
pandas = "*"
requests = "*"
pyproj = "*"
ipyleaflet = "*"
geopandas = "*"
rasterio = "1.3.11"
shapely = "*"
gdown = "*"
numpy = "*"
matplotlib = "*"
contextily = "*"
fiona = "*"
rtree = "*"
plotly = "*"
tqdm = "*"
scipy = "*"
affine = "*"
earthengine-api = "*"
geemap = "*"
rio-cogeo = "*"
geopy = "*"
py-vox-io = "*"
mapbox_vector_tile = "*"
reverse_geocoder = "*"
pycountry = "*"
osm2geojson = "*"
seaborn = "*"
overturemaps = "*"
protobuf = "3.20.3"
timezonefinder = "*"
astral = "*"
osmnx = "*"
joblib = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[project.urls]
bugs = "https://github.com/kunifujiwara/voxcity/issues"
changelog = "https://github.com/kunifujiwara/voxcity/blob/master/changelog.md"
homepage = "https://github.com/kunifujiwara/voxcity"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["voxcity", "voxcity.download", "voxcity.geo", "voxcity.file", "voxcity.sim", "voxcity.utils"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"