[tool.poetry]
name = "voxcity"
version = "1.0.21"
description = "voxcity is an easy and one-stop tool to output 3d city models for microclimate simulation by integrating multiple geospatial open-data"
readme = "README.md"
license = "MIT"
authors = ["Kunihiko Fujiwara <fujiwara.kunihiko@takenaka.co.jp>"]
maintainers = ["Kunihiko Fujiwara <fujiwara.kunihiko@takenaka.co.jp>"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    {include = "voxcity", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "*"
pandas = "*"
requests = "*"
pyproj = "*"
ipyleaflet = "*"
geopandas = "*"
rasterio = ">=1.3.11"
shapely = "*"
gdown = "*"
numpy = "*"
matplotlib = "*"
contextily = "*"
fiona = "*"
rtree = "*"
plotly = "*"
tqdm = "*"
scipy = "*"
affine = "*"
earthengine-api = "*"
geemap = "*"
rio-cogeo = "*"
geopy = "*"
py-vox-io = "*"
numba = "*"
reverse_geocoder = "*"
pycountry = "*"
seaborn = "*"
overturemaps = "*"
protobuf = "*"
timezonefinder = "*"
astral = "*"
osmnx = "*"
joblib = "*"
trimesh = "*"
pyvista = "*"
IPython = "*"
lxml = "*"
scikit-learn = "*"
xarray = "*"
netCDF4 = "*"
nbformat = "*"
taichi = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.poetry.extras]
gpu = ["taichi"]

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
taichi = "*"

[tool.poetry.urls]
bugs = "https://github.com/kunifujiwara/voxcity/issues"
changelog = "https://github.com/kunifujiwara/voxcity/blob/master/changelog.md"
homepage = "https://github.com/kunifujiwara/voxcity"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gee: marks tests that require Google Earth Engine authentication",
]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/voxcity"]
# Note: When running coverage with integration tests, use:
#   pytest tests/ --cov=src/voxcity --ignore=tests/test_integration_pipeline.py
# This avoids GPU/Taichi resource contention issues with coverage instrumentation
omit = [
  # Visualization and I/O heavy modules (non-deterministic / GUI)
  "src/voxcity/utils/visualization.py",
  # External data/network heavy downloaders (require network/external services)
  "src/voxcity/downloader/gee.py",
  "src/voxcity/downloader/mbfp.py",
  "src/voxcity/downloader/oemj.py",
  "src/voxcity/downloader/overture.py",
  "src/voxcity/downloader/citygml.py",
  "src/voxcity/downloader/osm.py",
  "src/voxcity/downloader/gba.py",
  "src/voxcity/downloader/eubucco.py",
  "src/voxcity/downloader/plateau.py",
  "src/voxcity/downloader/cog.py",
  "src/voxcity/downloader/las.py",
  "src/voxcity/downloader/ocean.py",
  # Pure exporters (file writers) not critical for algorithmic coverage
  "src/voxcity/exporter/*",
  # GPU-specific code requiring Taichi/CUDA hardware (tested via integration tests)
  "src/voxcity/simulator_gpu/*",
  "src/voxcity/visualizer/renderer_gpu.py",
  # Visualization/rendering code (requires GUI/display)
  "src/voxcity/visualizer/renderer.py",
  "src/voxcity/visualizer/maps.py",
  "src/voxcity/visualizer/palette.py",
  # Drawing code (interactive/visualization)
  "src/voxcity/geoprocessor/draw.py",
  # Weather data downloading (requires external API)
  "src/voxcity/utils/weather/onebuilding.py",
  # Raster I/O heavy modules (require GeoTIFF files)
  "src/voxcity/geoprocessor/raster/buildings.py",
  "src/voxcity/geoprocessor/raster/canopy.py",
  "src/voxcity/geoprocessor/raster/landcover.py",
  "src/voxcity/geoprocessor/raster/raster.py",
  "src/voxcity/geoprocessor/raster/export.py",
  # Grid generation (requires external data sources)
  "src/voxcity/generator/grids.py",
  "src/voxcity/generator/api.py",
  # Visibility simulation (requires full voxel grid)
  "src/voxcity/simulator/visibility/view.py",
  "src/voxcity/simulator/visibility/landmark.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pass",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"