[tool.poetry]
name = "voxcity"
version = "1.1.9"
description = "voxcity is an easy and one-stop tool to output 3d city models for microclimate simulation by integrating multiple geospatial open-data"
readme = "README.md"
license = "MIT"
authors = ["Kunihiko Fujiwara <fujiwara.kunihiko@takenaka.co.jp>"]
maintainers = ["Kunihiko Fujiwara <fujiwara.kunihiko@takenaka.co.jp>"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    {include = "voxcity", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "*"
pandas = ">=1.5,<3"
requests = "*"
pyproj = ">=3.4,<4"
ipyleaflet = "*"
geopandas = ">=0.13,<2"
rasterio = ">=1.3.11,<2"
shapely = ">=2.0,<3"
gdown = "*"
numpy = ">=1.24,<3"
matplotlib = "*"
contextily = "*"
fiona = ">=1.9,<2"
rtree = "*"
plotly = "*"
tqdm = "*"
scipy = ">=1.10,<2"
affine = "*"
earthengine-api = "*"
geemap = "*"
rio-cogeo = "*"
geopy = "*"
py-vox-io = "*"
numba = ">=0.57,<1"
reverse_geocoder = "*"
pycountry = "*"
seaborn = "*"
overturemaps = "*"
protobuf = "*"
timezonefinder = "*"
astral = "*"
osmnx = "*"
joblib = "*"
trimesh = "*"
h5py = "*"
pyvista = "*"
IPython = "*"
lxml = "*"
scikit-learn = ">=1.2,<2"
xarray = "*"
netCDF4 = "*"
nbformat = "*"
taichi = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.poetry.extras]
gpu = ["taichi"]

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
taichi = "*"

[tool.poetry.urls]
bugs = "https://github.com/kunifujiwara/voxcity/issues"
changelog = "https://github.com/kunifujiwara/voxcity/blob/master/changelog.md"
homepage = "https://github.com/kunifujiwara/voxcity"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gee: marks tests that require Google Earth Engine authentication",
]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/voxcity"]
# Note: When running coverage with integration tests, use:
#   pytest tests/ --cov=src/voxcity --ignore=tests/test_integration_pipeline.py
# This avoids GPU/Taichi resource contention issues with coverage instrumentation
omit = [
  # Use */voxcity/ prefix so patterns match both src/ (local) and
  # site-packages/ (CI after pip install).
  # ---------- Network-dependent downloaders ----------
  "*/voxcity/downloader/gee.py",
  "*/voxcity/downloader/mbfp.py",
  "*/voxcity/downloader/oemj.py",
  "*/voxcity/downloader/overture.py",
  "*/voxcity/downloader/citygml.py",
  "*/voxcity/downloader/osm.py",
  "*/voxcity/downloader/gba.py",
  "*/voxcity/downloader/eubucco.py",
  "*/voxcity/downloader/ocean.py",
  # ---------- GPU / Taichi (tested via integration tests) ----------
  "*/voxcity/simulator_gpu/*",
  "*/voxcity/visualizer/renderer_gpu.py",
  # ---------- GUI / Jupyter widget code ----------
  "*/voxcity/visualizer/renderer.py",
  "*/voxcity/visualizer/maps.py",
  "*/voxcity/geoprocessor/draw/*",
  # ---------- Modules that import hard deps at top level ----------
  "*/voxcity/geoprocessor/raster/buildings.py",  # imports downloader.gee
  "*/voxcity/generator/grids.py",                # imports all downloaders
  "*/voxcity/generator/api.py",                  # imports all downloaders
  "*/voxcity/simulator/visibility/view.py",      # imports exporter.obj
  "*/voxcity/simulator/visibility/landmark.py",  # heavy compute, imports matplotlib
  # ---------- Network-dependent weather ----------
  "*/voxcity/utils/weather/onebuilding.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pass",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"